; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_wlan.c_host_sleep_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_wlan.c_host_sleep_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wilc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.wilc*, i32, i32)* }

@WILC_BUS_ACQUIRE_ONLY = common dso_local global i32 0, align 4
@WILC_BUS_RELEASE_ONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @host_sleep_notify(%struct.wilc* %0) #0 {
  %2 = alloca %struct.wilc*, align 8
  store %struct.wilc* %0, %struct.wilc** %2, align 8
  %3 = load %struct.wilc*, %struct.wilc** %2, align 8
  %4 = load i32, i32* @WILC_BUS_ACQUIRE_ONLY, align 4
  %5 = call i32 @acquire_bus(%struct.wilc* %3, i32 %4)
  %6 = load %struct.wilc*, %struct.wilc** %2, align 8
  %7 = getelementptr inbounds %struct.wilc, %struct.wilc* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.wilc*, i32, i32)*, i32 (%struct.wilc*, i32, i32)** %9, align 8
  %11 = load %struct.wilc*, %struct.wilc** %2, align 8
  %12 = call i32 %10(%struct.wilc* %11, i32 4268, i32 1)
  %13 = load %struct.wilc*, %struct.wilc** %2, align 8
  %14 = load i32, i32* @WILC_BUS_RELEASE_ONLY, align 4
  %15 = call i32 @release_bus(%struct.wilc* %13, i32 %14)
  ret void
}

declare dso_local i32 @acquire_bus(%struct.wilc*, i32) #1

declare dso_local i32 @release_bus(%struct.wilc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
